--- a/manager/package.json
+++ b/manager/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-communications": "^2.2.1",
     "react-native-router-flux": "^3.35.0",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.0.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0-alpha.12"
   },
